# crypto-trader

./: .gitignore  Model_Prediction.ipynb  README.md  backtest.py  bot.py  config.py  evaluator.py  historical_data.py  history_manager.py  interpretations.md  metrics.py  model_manager.py  picking_best_model.ipynb  pyproject.toml  test_feature.ipynb  test_model.py  testing.ipynb
backtest_output/datasets/: FEATURES_120_days_ago_UTC_BTCUSDT_4h_linreg_20251014_082122.csv  OHLCV_120_days_ago_UTC_BTCUSDT_4h_linreg_20251014_082122.csv
backtest_output/metrics/: SHORTLIST_stable.csv  SHORTLIST_topk.csv  SUMMARY_BTCUSDT_20250831_204554.csv  SUMMARY_BTCUSDT_20250831_205151.csv  SUMMARY_BTCUSDT_20250831_205328.csv  SUMMARY_BTCUSDT_20250831_210134.csv  SUMMARY_BTCUSDT_20250831_221626.csv  SUMMARY_BTCUSDT_20250831_231224.csv  SUMMARY_BTCUSDT_20250831_233243.csv  SUMMARY_BTCUSDT_20250831_234456.csv  SUMMARY_BTCUSDT_20250901_060601.csv  SUMMARY_BTCUSDT_20250901_064728.csv  SUMMARY_BTCUSDT_20250901_141828.csv  SUMMARY_BTCUSDT_20251005_054449.csv  SUMMARY_BTCUSDT_20251005_073131.csv  SUMMARY_BTCUSDT_20251005_125402.csv  SUMMARY_BTCUSDT_20251011_193635_classify.csv  (+6 more)
evaluations/: evaluator.py  metrics.py
features/: fear_index.py  fomc.py  news.py  on_chain_data.py
managers/: history_manager.py  model_manager.py  position_manager.py
metrics/: deflated_sharpe.py
scripts/: lint.sh  start.sh
tests/: test_bot.py  test_evaluator.py  test_fear_index.py  test_metrics.py  test_on_chain_data.py  test_test_model.py
utils/: bert_sentiment.py  finbert_tf.py
